--- a/index.html
+++ b/index.html
@@ -440,10 +440,10 @@
                                 <div id="options-container" class="grid grid-cols-1 gap-3"></div>
                             </div>
                         </div>
-                        <div class="h-20 bg-white border-t border-slate-200 flex items-center justify-between px-6 shrink-0">
-                            <button onclick="window.prevQuestion()" class="px-6 py-2 rounded-xl font-bold text-slate-500 hover:bg-slate-100">Prev</button>
-                            <button onclick="window.nextQuestion()" id="btn-next" class="px-8 py-3 bg-emerald-600 text-white rounded-xl font-bold shadow-lg disabled:opacity-50">Next</button>
-                            <button onclick="window.submitQuiz()" id="btn-submit" class="hidden px-8 py-3 bg-emerald-600 text-white rounded-xl font-bold shadow-lg">Submit</button>
+                        <div class="h-20 bg-white border-t border-slate-200 flex items-center justify-between px-4 md:px-6 shrink-0">
+                            <button onclick="window.prevQuestion()" class="px-4 md:px-6 py-2 rounded-xl font-bold text-sm md:text-base text-slate-500 hover:bg-slate-100">Prev</button>
+                            <button onclick="window.nextQuestion()" id="btn-next" class="px-6 md:px-8 py-3 bg-emerald-600 text-white rounded-xl font-bold text-sm md:text-base shadow-lg disabled:opacity-50">Next</button>
+                            <button onclick="window.submitQuiz()" id="btn-submit" class="hidden px-6 md:px-8 py-3 bg-emerald-600 text-white rounded-xl font-bold text-sm md:text-base shadow-lg">Submit</button>
                         </div>
                     </div>
 
