--- a/chat.html
+++ b/chat.html
@@ -96,7 +96,7 @@
     <div id="chat-container" class="hidden h-full flex flex-col">
         
         <!-- Header -->
-        <header class="bg-white/95 backdrop-blur border-b border-slate-200 px-4 py-3 flex items-center justify-between shrink-0">
+        <header class="bg-white/95 backdrop-blur border-b border-slate-200 px-4 py-3 flex items-center shrink-0">
             <div class="flex items-center gap-3">
                 <a href="index.html" class="text-slate-400 hover:text-slate-600">
                     <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 19l-7-7 7-7"></path></svg>
@@ -109,9 +109,6 @@
                     <p class="text-xs text-slate-500"><span id="online-count">0</span> online</p>
                 </div>
             </div>
-            <button onclick="handleLogout()" class="text-sm font-bold text-red-500 hover:text-red-600">
-                Exit
-            </button>
         </header>
 
         <!-- Messages Area -->
